# Computational-Thinking-with-CPP

Chapter-01/: CMakeLists.txt  max_element.hpp  recursive_word.cpp  recursive_word.hpp  test_max_element.cpp  test_recursive_word.cpp
Chapter-02/: CMakeLists.txt  Exercises.md  address_book_record.cpp  address_book_record.hpp  concrete_temperature_sensor.cpp  concrete_temperature_sensor.hpp  conversion_traits.hpp  expanding_search_range.cpp  expanding_search_range.hpp  find_root.hpp  function_with_noise.hpp  intensity_grid_search.cpp  intensity_grid_search.hpp  signal_intensity.cpp  signal_intensity.hpp  summary_statistics.cpp  summary_statistics.hpp  temperature_sensors.cpp  temperature_sensors.hpp  test_find_root.cpp  test_function_with_noise.cpp  test_signal_intensity.cpp  test_summary_statistics.cpp  test_temperature_sensors.cpp
Chapter-03/: CMakeLists.txt  Exercises.md  Solutions.md  powers.hpp  quick_sort.hpp  test_powers.cpp  test_quick_sort.cpp
Chapter-04/: CMakeLists.txt  bench_clamp_loop.cpp  bench_gemm.cpp  cache_information.cpp  clamp_loop.h  gemm.cpp  matrix.h  matrix_view.h  nearest_neighbor.cpp  nearest_neighbor.h  page_size_report.cpp  saxpy.cpp  saxpy.h  test_gemm.cpp
Chapter-05/: CMakeLists.txt  bench_containers.h  benchmark_hash.cpp  vcpkg.json
Chapter-06/: library.cpp
Chapter-06/ctode/: CMakeLists.txt  ctode.h
Chapter-07/: CMakeLists.txt
Chapter-08/: CMakeLists.txt  main.cpp  vcpkg.json
Chapter-09/: CMakeLists.txt
Chapter-09/common/: CMakeLists.txt
Chapter-09/readers/: csv_reader.cpp  file_reader.cpp  test_csv_reader.cpp
Chapter-10/: CMakeLists.txt
Chapter-10/readers/: csv_reader.cpp  csv_reader.h  file_reader.h
Chapter-11/: CMakeLists.txt
Chapter-11/clustering/: CMakeLists.txt  clustering.cpp  coord3.cpp  kmeans.cpp  kmeans.h  test_clustering.cpp  test_kmeans.cpp
Chapter-11/readers/: CMakeLists.txt  csv_reader.cpp  file_reader.cpp  free_reader.cpp  free_reader.h  json_reader.cpp  test_json_reader.cpp
Chapter-12/: CMakeLists.txt  main.cpp
Chapter-12/clustering/: CMakeLists.txt  clustering.h  coord3.h  develop_clustering.cpp  kmeans.cpp  test_coord3.cpp  test_kmeans.cpp
Chapter-12/common/: duckies_types.h
Chapter-12/readers/: CMakeLists.txt  csv_reader.cpp  file_reader.cpp  free_reader.cpp  json_reader.cpp  test_csv_reader.cpp  (+1 more)
Chapter-13/: CMakeLists.txt  byte_order.cpp  main.cpp
Chapter-14/: CMakeLists.txt  main.cu
Chapter-15/: CMakeLists.txt  bench_weighted_average.cpp
Chapter-4/: CMakeLists.txt  bench_nearest_neighbor.cpp  bench_saxpy.cpp  clamp_loop.cpp  gemm.h  get_best_instructions.h  my_cpuid.h  open_mp_demo.cpp  saxpy_hand.cpp  test_gemm.cpp
Chapter-5/: bench_container_traversal.cpp
Chapter-6/: exported_fns.cpp  library.h  module_example.ixx
(+10 files in other folders)
